--- a/.github/workflows/03-post-deploy-exec.yaml
+++ b/.github/workflows/03-post-deploy-exec.yaml
@@ -54,3 +54,9 @@ jobs:
       # Executando  os teste e2e
       - name: Executando Testes E2E
         run: yarn run e2e
+
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with: 
+          name: relatorio
+          path: ./playwright-report  
